--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,17 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+
+  width: 100%;
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
